# api-brecho

./: .gitignore  README.md  main.py  pyproject.toml  routes.py
JWT/: __init__.py  auth.py  config.py  token.py
controllers/: roupa_endpoints.py  user_endpoints.py  usuario_endpoints.py
database/: database.sqlite  db_config.py
models/: __init__.py  roupa.py  usuario.py
routes/: auth_endpoints.py  router.py
tests/: __init__.py  user_test.py
tests/utils/: create_user.py
