[tool.poetry]
name = "brecho-projeto"
version = "0.1.0"
description = ""
authors = ["mrtapajos <davidlcaldas.34@gmail.com>"]
readme = "README.md"
packages = [{include = "brecho_projeto"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
ormar = {extras = ["sqlite"], version = "^0.12.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
